compiler/actonc/test/typeerrors/ex10.act
def f(x):
    try:
        y = x+2
    except int:
        pass
    
    
